examples/compiler_errors/ExtraModuleCode.flx
module ExtraModuleCode {
    fn value() -> Int {
        1
    }
}

fn stray() -> Int {
    2
}
